feat(clientes): reemplazar selects por datalist con filtro por distrito